# elementary-intelligence

./: Cargo.toml  README.md
data/: style.css
src/: api.rs  app.rs  blur.rs  calendar.rs  config.rs  keybinding.rs  main.rs  markdown.rs  screenshot.rs  settings_window.rs  spotlight.rs  tools.rs
